--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+build.sh
+upload.sh
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
